# 260709_amr_lidar_calib_ws

./: .gitignore  COMMANDS.txt  CONNECTIONS.txt  DIRECTORY_GUIDE.txt  README.md  pyproject.toml
.omc/observations/: observations.jsonl
amr_lidar/: __init__.py  ms3_emitter.py  ms3_subscriber.py  relay_client.py  relay_server.py  seer_client.py  viewer.py
apps/lidar_2d_calibration/: README.md  app.py  pyproject.toml  requirements.txt
apps/lidar_2d_calibration/config/: calibration_result new.yaml  calibration_result.yaml  sensors.yaml
apps/lidar_2d_calibration/core/: __init__.py  calibration_engine.py  icp_algorithm.py  region_manager.py  tf_calculator.py
apps/lidar_2d_calibration/sensor_io/: __init__.py  config_loader.py  nanoscan3_protocol.py  nanoscan3_receiver.py  scan_source.py
apps/lidar_2d_calibration/tools/: discover.py  replay.py  synth_packets.py
apps/lidar_2d_calibration/ui/: __init__.py  calibration_main.ui  calibration_window.py  scan_canvas.py
artifacts/: amr_scan_view.html  scan_snapshot.json  scan_worldframe.json
docs/: README.md
docs/analysis/: 2026-07-09-2d-lidar-icp-calibration.md
docs/code_updates/: amr_lidar_code_updates.md
docs/protocol/: README.md
reference/: seer-api-text.txt
scripts/: README.txt  kill_all.bat  kill_all.ps1  run_calibration_app.bat  run_ms3_emitter.bat  run_ms3_subscriber.bat  run_relay_client.bat  run_relay_server.bat  run_viewer.bat
tools/: build_scan_view_html.py  build_worldframe_payload.py  cola2_probe.py  fetch_scan_snapshot.py  nanoscan3_udp_probe.py  seer_discovery.py  ssh_recon.py
(+8 files in other folders)
