[project]
name = "lidar-2d-calibration-window"
version = "0.1.0"
description = "2D LiDAR (SICK nanoScan3) extrinsic calibration — Windows native, UDP-based"
requires-python = ">=3.10"

# 코드 포맷터 선택 (docs/claude_guideline/coding/stack.md §1) — 준수는 black/isort 도구가 강제
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: 실제 소켓/하드웨어를 사용하는 통합 테스트",
]
